[tool.poetry]
name = "hayashilstm"
version = "0.1.0"
description = ""
authors = ["yoshida wataru"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.8"
numpy = "^1.19.2"
pytorch-lightning = "^0.8.0"
scikit-learn = "^0.23.2"
pandas = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
